style : 모든 바우처 정책에 대해 조회하는 메서드명 자료형이 들어가 제거